--- a/src/components/css/base/_base.scss
+++ b/src/components/css/base/_base.scss
@@ -13,11 +13,3 @@ html {
 body {
   box-sizing: border-box;
 }
-
-.App {
-  min-height: 100vh;
-  background-image:url('../static/lightbackground.jpg');
-  background-repeat: repeat;
-  background-attachment: fixed;
-  background-position: center;
-}
