--- a/src/components/css/question/_questions.scss
+++ b/src/components/css/question/_questions.scss
@@ -1,3 +1,4 @@
 .list-section {
   text-align: center;
+  display: block;
 }
